# perler-bead

./: .gitignore  app.py  colors.py  pyproject.toml
static/: colors.html  compare.html  index.html
