[project]
name = "perler-bead"
version = "0.1.0"
description = "Perler bead pattern generator with CIEDE2000 color matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-compress>=1.23",
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "pillow>=11.0",
    "pixeloe>=0.1.4",
    "scikit-image>=0.24",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
